syntax = "proto3";

package bytebase.store;

import "google/rpc/status.proto";

option go_package = "generated-go/store";

message AuditLog {
  // The project or workspace the audit log belongs to.
  // Formats:
  // - projects/{project}
  // - workspaces/{workspace}
  string parent = 1;

  // e.g. /bytebase.v1.SQLService/Query
  string method = 2;

  // resource name
  // projects/{project}
  string resource = 3;

  // Format: users/{userUID}.
  string user = 4;

  Severity severity = 5;

  // Marshalled request.
  string request = 6;

  // Marshalled response.
  // Some fields are omitted because they are too large or contain sensitive information.
  string response = 7;

  google.rpc.Status status = 8;

  enum Severity {
    DEFAULT = 0;
    DEBUG = 1;
    INFO = 2;
    NOTICE = 3;
    WARNING = 4;
    ERROR = 5;
    CRITICAL = 6;
    ALERT = 7;
    EMERGENCY = 8;
  }
}
